# signeo-desktop-backend

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  run.ps1
include/: AAudioDevice.hpp  AudioCapture.hpp  AudioDeviceManager.hpp  AudioPlayback.hpp  IAudioDevice.hpp
platform/windows/include/: WindowsAudioCapture.hpp  WindowsAudioDevice.hpp  WindowsAudioPlayback.hpp
platform/windows/src/: WindowsAudioCapture.cpp  WindowsAudioDevice.cpp  WindowsAudioPlayback.cpp
scripts/: .gitignore  build.ps1  build.sh  ensure-tools.ps1  run.ps1  start.ps1
sources/: main.cpp
src/: AAudioDevice.cpp  AudioCapture.cpp  AudioDeviceManager.cpp  AudioPlayback.cpp  main.cpp
test/: test.py
